<resources>
    <string name="app_name">Opecise</string>
    <string name="login">LOGIN</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="enter_name">Enter Name</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="app_development">APP DEVELOPMENT</string>
    <string name="digital_marketing">DIGITAL MARKETING</string>
    <string name="graphic_designing">GRAPHIC DESIGNING</string>
    <string name="services">SERVICES</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="portfolio">PORTFOLIO</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LOGOUT</string>
    
</resources>
