<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_account_action"
            android:title="@string/change_password" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                />
        </menu>
    </item>

</menu>
