<?xml version="1.0" encoding="utf-8"?>




<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:id="@+id/Constraint_layout"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/services"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/Btn_web_development"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/web_development"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/activity_horizontal_margin"

        app:layout_constraintRight_toLeftOf="@id/VerticalGuideline"
        app:layout_constraintBottom_toTopOf="@id/HorizontalGuideline"/>

    <Button
        android:id="@+id/Btn_app_development"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/app_development"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/activity_horizontal_margin"

        app:layout_constraintLeft_toRightOf="@id/VerticalGuideline"
        app:layout_constraintBottom_toTopOf="@id/HorizontalGuideline"/>

    <Button
        android:id="@+id/Btn_digital_marketing"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/digital_marketing"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/activity_horizontal_margin"

        app:layout_constraintRight_toLeftOf="@id/VerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/HorizontalGuideline"/>

    <Button
        android:id="@+id/Btn_graphic_designing"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_rounded"
        android:text="@string/graphic_designing"
        android:textColor="@color/colorPrimary"

        app:layout_constraintLeft_toRightOf="@id/VerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/HorizontalGuideline"/>

    <android.support.constraint.Guideline
       android:id="@+id/VerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
       app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/HorizontalGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>
</android.support.constraint.ConstraintLayout>

