<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:textSize="60sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="15dp"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Edt_txt_sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            >

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Edt_txt_sign_up_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            >

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_no"
                android:textColorHint="@color/colorAccent"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Edt_txt_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            >

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColorHint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Edt_txt_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Edt_txt_sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp">

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                />

        </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/btn_rounded"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/Txt_view_already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="Already an User?Login here."
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>